--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
         elements.forEach(element => {
           let hideElement = false;
           console.log(element.dataset.messageType, element.dataset.actorName, element.dataset.friendlyText);
-          if(filters.filterFriendlyText && !(element.dataset.friendlyText || '').includes(filters.filterFriendlyText)){
+          if(filters.filterFriendlyText && !(element.dataset.friendlyText || '').toLowerCase().includes(filters.filterFriendlyText.toLowerCase())){
             hideElement = true;
           }
           if(filters.filterMessageType && !(element.dataset.messageType || '').includes(filters.filterMessageType)){
@@ -730,7 +730,6 @@
         codeTagContainer.appendChild(codeTag);
         return codeTagContainer
       }
-
 
       /**
        * Given a startsCastingMessage, create an HTML table with it's data
