--- a/index.html
+++ b/index.html
@@ -64,12 +64,17 @@
       }
       #toolbarFiltersWrapper{
         background-color: white;
-        border: 1px solid #c2c2c2;
+        border-right: 1px solid #c2c2c2;
+        border-bottom: 1px solid #c2c2c2;
+        border-left: 1px solid #c2c2c2;
         border-bottom-right-radius: 8px;
         border-bottom-left-radius: 8px;
         padding: 8px;
         display: flex;
         flex-direction: column;
+        -webkit-box-shadow: 2px 2px 3px 0px rgba(0,0,0,0.2);
+        -moz-box-shadow: 2px 2px 3px 0px rgba(0,0,0,0.2);
+        box-shadow: 2px 2px 3px 0px rgba(0,0,0,0.2);
       }
       #toolbarFiltersWrapper > .toolbarRow:not(:last-child){
         padding-bottom: 8px;
@@ -85,6 +90,10 @@
         padding: 8px;
         transition: background-color .075s ease-out;
         border-radius: 8px;
+      }
+
+      .itemFriendlyView > span:first-child{
+        padding-right: 8px;
       }
 
       .itemContainer[open] > .itemFriendlyView{
@@ -1002,8 +1011,7 @@
 
         // Actor using an Ability on a Target
         const friendlyActorElement = document.createElement('span');
-        let friendlyText = `<b>${message.actorName}</b> used <b>${message.actionName}</b>
-        `;
+        let friendlyText = `<b>${message.actorName}</b> used <b>${message.actionName}</b>`;
         friendlyText += message.targetName ? ` on <b>${message.targetName}</b>` : '';
         friendlyText += !isNaN(message.amount) ? ' for <b>' + message.amount + '</b>': '';
         friendlyActorElement.innerHTML = friendlyText;
