--- a/index.html
+++ b/index.html
@@ -55,12 +55,24 @@
         cursor: pointer;
       }
 
+      .toolbarRow{
+        display: flex;
+        flex-direction: row;
+      }
+      .toolbarRow > .toolbarItem:not(:last-child){
+        padding-right: 8px;
+        border-right: 1px solid #f2f2f2;
+      }
+      .toolbarRow > .toolbarItem:not(:first-child){
+        padding-left: 8px;
+      }
+
       #toolbarFilters{
         position: absolute;
         top: 42px;
         width: 100%;
         box-sizing: border-box;
-        padding: 0px 8px 8px 8px;
+        padding: 0px 4px 0px 4px;
       }
       #toolbarFiltersWrapper{
         background-color: white;
@@ -80,8 +92,6 @@
         padding-bottom: 8px;
         margin-bottom: 8px;
         border-bottom: 1px solid #f2f2f2;
-        display: flex;
-        flex-direction: row;
       }
 
       .itemFriendlyView{
@@ -195,6 +205,18 @@
               name="messageTypeDropdown"
               style="flex: 1; margin-left: 8px;"
               onchange="updateFilter('filterMessageType', this.value)"
+            >
+              <option value=""/>
+            </select>
+          </div>
+          <div class="toolbarItem" style="flex: 1; display: flex;">
+            <label for="inputActorDropdown" id="inputActorDropdownLabel">Actor: </label>
+            <select
+              type="search"
+              id="inputActorDropdown"
+              name="actorDropdown"
+              style="flex: 1; margin-left: 8px;"
+              onchange="updateFilter('filterActorId', this.value)"
             >
               <option value=""/>
             </select>
@@ -355,9 +377,9 @@
           actionId: message.line[2],
           actionName: message.line[3],
           duration: message.line[4],
-          actorId: message.line[5],
+          actorId: parseInt(message.line[5], 16),
           actorName: message.line[6],
-          targetId: message.line[7],
+          targetId: parseInt(message.line[7], 16),
           targetName: message.line[8],
           //???: message.line[9],
           amount: unshiftHexAndConvert(message.line[10], 3)
@@ -410,9 +432,9 @@
           actionId: message.line[2],
           actionName: message.line[3],
           duration: message.line[4],
-          actorId: message.line[5],
+          actorId: parseInt(message.line[5], 16),
           actorName: message.line[6],
-          targetId: message.line[7],
+          targetId: parseInt(message.line[7], 16),
           targetName: message.line[8]
         };
       }
@@ -518,7 +540,7 @@
       });
 
       const abilities = [];
-      const actors = [];
+      const actors = {};
       const targets = [];
       const actions = [];
       const effects = [];
@@ -528,25 +550,27 @@
       const filters = {
         filterFriendlyText: null,
         filterMessageType: null,
-        filterActor: null,
+        filterActorId: null,
         filterTarget: null,
         filterAction: null,
       }
 
       let updateFilterTimeout = null;
       function updateFilter(filterName, value, buffer){
-        filters[filterName] = value;
-        if(buffer){
-          if(updateFilterTimeout){
-            clearTimeout(updateFilterTimeout);
+        if(filters[filterName] !== value){
+          filters[filterName] = value;
+          if(buffer){
+            if(updateFilterTimeout){
+              clearTimeout(updateFilterTimeout);
+            }
+            updateFilterTimeout = setTimeout(() => {
+              filterElements();
+              updateFilterTimeout = null;
+            }, buffer);
           }
-          updateFilterTimeout = setTimeout(() => {
+          else{
             filterElements();
-            updateFilterTimeout = null;
-          }, buffer);
-        }
-        else{
-          filterElements();
+          }
         }
       }
 
@@ -561,15 +585,25 @@
         });
       }
 
+      function addActor(actorId, actorName){
+        if(!actors[actorId]){
+          actors[actorId] = actorName;
+          const newOption = document.createElement('option');
+          newOption.value = actorId;
+          newOption.innerHTML = `${actorName} (${actorId})`;
+          document.getElementById('inputActorDropdown').appendChild(newOption);
+        }
+      }
+
       function shouldHideElement(element){
         let hideElement = false;
         if(filters.filterFriendlyText && !(element.dataset.friendlyText || '').toLowerCase().includes(filters.filterFriendlyText.toLowerCase())){
           hideElement = true;
         }
-        if(filters.filterMessageType && !(element.dataset.messageType || '').includes(filters.filterMessageType)){
+        if(filters.filterMessageType && element.dataset.messageType != filters.filterMessageType){
           hideElement = true;
         }
-        if(filters.filterActor && !(element.dataset.actorId || '').includes(filters.filterActor)){
+        if(filters.filterActorId && element.dataset.actorId != filters.filterActorId){
           hideElement = true;
         }
         return hideElement;
@@ -629,6 +663,7 @@
             switch(messageType){
               case MESSAGE_TYPE_STARTS_CASTING:
                 const startsCastingMessage = parseMessageStartsCasting(data);
+                addActor(startsCastingMessage.actorId, startsCastingMessage.actorName);
                 logMessage(
                   startsCastingMessage,
                   startsCastingMessage.actorId,
@@ -647,6 +682,7 @@
                 break;
               case MESSAGE_TYPE_USE_ABILITY:
                 const usedAbilityMessage = parseMessageUsedAbility(data);
+                addActor(usedAbilityMessage.actorId, usedAbilityMessage.actorName);
                 logMessage(
                   usedAbilityMessage,
                   usedAbilityMessage.actorId,
@@ -665,6 +701,7 @@
                 break;
               case MESSAGE_TYPE_GAIN_EFFECT:
                 const gainedEffectMessage = parseMessageGainEffect(data);
+                addActor(gainedEffectMessage.actorId, gainedEffectMessage.actorName);
                 logMessage(
                   gainedEffectMessage,
                   gainedEffectMessage.actorId,
@@ -683,6 +720,7 @@
                 break;
               case MESSAGE_TYPE_LOSE_EFFECT:
                 const lostEffectMessage = parseMessageLostEffect(data);
+                addActor(lostEffectMessage.actorId, lostEffectMessage.actorName);
                 logMessage(
                   lostEffectMessage,
                   lostEffectMessage.actorId,
